Fix bug#6, tutorial clips off on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,6 +253,10 @@ body {
     padding: 5px;
 }
 
+#tutorial {
+    max-width: 95vw;
+}
+
 .menu-bar {
     display: flex;
     flex-direction: row;
